[tool.poetry]
name = "triton-nautilus"
version = "0.1.0"
description = "Launching triton inference servers with kubernetes"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

torch = {version = "^1.10", source = "torch"}
s3fs = "^2023.10.0"

[tool.poetry.dependencies."hermes.quiver"]
path = "./hermes/hermes/hermes.quiver"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
